// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day component renders a .Day by default 1`] = `
<Link
  to="/day/undefined"
>
  <div
    className="day_box"
    style={Object {}}
  >
    <div
      className="bold"
    >
      <div
        className="topline"
      >
        <p
          className="big"
        >
          Day #
        </p>
        <i
          className="fas fa-pencil-alt fa-sm"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={Object {}}
        />
      </div>
      <p
        className="big"
      />
    </div>
    <section
      className="completed_box"
    >
      <p>
        /
         hours
      </p>
    </section>
  </div>
</Link>
`;

exports[`Day component renders the Day given props of touched 1`] = `
<Link
  to="/day/2"
>
  <div
    className="day_box"
    style={
      Object {
        "backgroundColor": "green",
        "color": "white",
      }
    }
  >
    <div
      className="bold"
    >
      <div
        className="topline"
      >
        <p
          className="big"
        >
          Day #
          2
        </p>
        <i
          className="fas fa-pencil-alt fa-sm"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "backgroundColor": "green",
              "color": "white",
            }
          }
        />
      </div>
      <p
        className="big"
      />
    </div>
    <section
      className="completed_box"
    >
      <p>
        2
        /
        3
         hours
      </p>
      <p
        className="bold"
      >
        Practice Details:
      </p>
      <p>
        Technique: 
        Hanon
      </p>
    </section>
  </div>
</Link>
`;

exports[`Day component renders the Day given props of untouched 1`] = `
<Link
  to="/day/1"
>
  <div
    className="day_box"
    style={Object {}}
  >
    <div
      className="bold"
    >
      <div
        className="topline"
      >
        <p
          className="big"
        >
          Day #
          1
        </p>
        <i
          className="fas fa-pencil-alt fa-sm"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={Object {}}
        />
      </div>
      <p
        className="big"
      />
    </div>
    <div
      className="qubox"
    >
      <i
        className="fas fa-question fa-3x"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </div>
  </div>
</Link>
`;
